--- a/teslausb_setup_variables.conf
+++ b/teslausb_setup_variables.conf
@@ -22,6 +22,7 @@ export WIFIPASS=password
 
 # If doing a headless (i.e. automatic) setup
 export HEADLESS_SETUP=true
+#export timezone=America/Chicago
 
 # Uncomment if setting up Pushover push notifications 
  #export pushover_enabled=true
@@ -30,10 +31,10 @@ export HEADLESS_SETUP=true
 
 # Uncomment and change if you want setup scripts to be pulled
 # from a different repo than the "main" github.com/cimryan/teslausb
- export REPO=jspv
+ export REPO=marcone
 
 # Uncomment and change if you want a different branch than master
- export BRANCH=master
+ export BRANCH=dev-main
 
 # Uncomment if you're using rsync/ssh for the archive. 
 # Note: RSYNC_ENABLE=true is going to disable the default archive server.
