--- a/teslausb_setup_variables.conf
+++ b/teslausb_setup_variables.conf
@@ -18,7 +18,7 @@ export campercent=100
 
 # Wifi setup information
 export SSID=ssid
-export WIFIPASS=password
+export WIFIPASS='password'
 
 # If doing a headless (i.e. automatic) setup
 export HEADLESS_SETUP=true
