--- a/teslausb_setup_variables.conf
+++ b/teslausb_setup_variables.conf
@@ -13,8 +13,10 @@ export ARCHIVE_SYSTEM=cifs
 export archiveserver=servername
 export sharename=TeslaCam
 export shareuser=TeslaCam
-export sharepassword=password
-export campercent=100
+export sharepassword='password'
+
+export camsize=100%
+export musicsize=0%
 
 # Wifi setup information
 export SSID=ssid
@@ -24,10 +26,24 @@ export WIFIPASS='password'
 export HEADLESS_SETUP=true
 #export timezone=America/Chicago
 
+# By default there is a 20 second delay between connecting to wifi and
+# starting the archiving of recorded clips. Uncomment this to change
+# the duration of that delay
+# export archivedelay=20
+
 # Uncomment if setting up Pushover push notifications 
  #export pushover_enabled=true
  #export pushover_user_key=
  #export pushover_app_key=
+ 
+# export gotify_enabled=false
+# export gotify_domain=https://gotify.domain.com
+# export gotify_app_token=put_your_token_here
+# export gotify_priority=5
+
+# export ifttt_enabled=false
+# export ifttt_event_name=put_your_event_name_here
+# export ifttt_key=put_your_key_here
 
 # Uncomment and change if you want setup scripts to be pulled
 # from a different repo than the "main" github.com/cimryan/teslausb
@@ -43,3 +59,13 @@ export HEADLESS_SETUP=true
 # export RSYNC_USER=<ftp username>
 # export RSYNC_SERVER=<ftp IP/host>
 # export RSYNC_PATH=<destination path to save in>
+
+# TeslaUSB can optionally use the Tesla API to keep your car awake, so it can
+# power the Pi long enough for the archiving process to complete. To enable
+# that, please provide your Tesla account email and password below.
+# TeslaUSB will only send your credentials to the Tesla API itself.
+# export tesla_email=email@email.com
+# export tesla_password='password'
+# Please also provide your vehicle's VIN, so TeslaUSB can keep the correct
+# vehicle awake.
+# export tesla_vin=vin
